добавлена возможность получить все источники
