# bi/docs/swagger.json
@@ -5,6 +5,22 @@
     },
     "paths": {
         "/source/": {
+            "get": {
+                "tags": [
+                    "источник"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.SourceDto"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "источник"
@@ -81,6 +97,20 @@
                 },
                 "typId": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.SourceDto": {
+            "type": "object",
+            "properties": {
+                "dsn": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "typ": {
+                    "$ref": "#/definitions/dto.SourceTypDto"
                 }
             }
         },
