# bi/internal/controller/http/source.go
@@ -15,13 +15,14 @@ type sourceRouter struct {
 func withSourceRouter(app *fiber.App, sourceService *service.SourceService) {
 	r := sourceRouter{sourceService: sourceService}
 	source := app.Group("/source/")
+	source.Get("/", r.getAll)
 	source.Post("/", r.add)
 	source.Post("/exec/", r.executeQuery)
 }
 
-// @tags источник
-// @param source body dto.SourceAddDto true "source"
-// @router /source/ [post]
+//	@tags	источник
+//	@param	source	body	dto.SourceAddDto	true	"source"
+//	@router	/source/ [post]
 func (r sourceRouter) add(ctx *fiber.Ctx) error {
 	var addDto dto.SourceAddDto
 
@@ -39,9 +40,9 @@ func (r sourceRouter) add(ctx *fiber.Ctx) error {
 	return ctx.SendString(fmt.Sprintf("%d", sourceId))
 }
 
-// @tags источник
-// @param query body dto.QueryDto true "query"
-// @router /source/exec/ [post]
+//	@tags	источник
+//	@param	query	body	dto.QueryDto	true	"query"
+//	@router	/source/exec/ [post]
 func (r sourceRouter) executeQuery(ctx *fiber.Ctx) error {
 	var queryDto dto.QueryDto
 
@@ -57,4 +58,15 @@ func (r sourceRouter) executeQuery(ctx *fiber.Ctx) error {
 	}
 
 	return ctx.JSON(dataset)
+}
+
+//	@tags		источник
+//	@success	200	{array}	dto.SourceDto
+//	@router		/source/ [get]
+func (r sourceRouter) getAll(ctx *fiber.Ctx) error {
+	sources, err := r.sourceService.GetAll(ctx.Context())
+	if err != nil {
+		return err
+	}
+	return ctx.JSON(sources)
 }
